form color contrast fixed

--- a/src/components/PhotoUpload/Droppy.scss
+++ b/src/components/PhotoUpload/Droppy.scss
@@ -2,7 +2,7 @@
 	margin: 6px 0 10px 0;
 	.dropzone {
 		background-color: $silver-lining;
-		color: $static-grey;
+		color: $dark-grey;
 		border-radius: 5px;
 		border: 2px dashed $static-grey;
 		padding: 20px;
